[update] #351 ジャンル判定の精度向上
primaryTypeを使ってよりピンポイントな判定を行えるようになった
