# backend/docs/swagger.json
@@ -2129,11 +2129,8 @@
                 "place_name": {
                     "type": "string"
                 },
-                "place_types": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
+                "primary_type": {
+                    "type": "string"
                 },
                 "user_lat": {
                     "type": "number"
@@ -2672,6 +2669,9 @@
         "services.PlaceResult": {
             "type": "object",
             "properties": {
+                "display_type": {
+                    "type": "string"
+                },
                 "is_breakout": {
                     "type": "boolean"
                 },
@@ -2696,14 +2696,11 @@
                 "place_id": {
                     "type": "string"
                 },
+                "primary_type": {
+                    "type": "string"
+                },
                 "rating": {
                     "type": "number"
-                },
-                "types": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
                 },
                 "vicinity": {
                     "type": "string"
